chore: replace deprecated method and constructor usage